--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -2,12 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>Frogs</title>
+    <title>Frog Menu</title>
   </head>
   <body>
-    <form action="route.do" method="GET">
-      <input type="text" name="data" /><br />
-      <input type="submit" value="Submit" /><br />
-    </form>
+  <a href="newFrog.html">Add a frog</a><br/>
+  <a href="SearchForFrog.html">Search for frog by name</a><br/>
   </body>
 </html>
