--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -2,10 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="styles.css"/>
     <title>Frog Menu</title>
   </head>
   <body>
-  <a href="newFrog.html">Add a frog</a><br/>
-  <a href="SearchForFrog.html">Search for frog by name</a><br/>
+  <h2>FROG INVENTORY</h2>
+  <a href="newFrog.html"><h2>Add a frog</h2></a><br/>
+    <a href="deleteFrog.html"><h2>Delete a frog</h2></a><br/>
+  	<a href="SearchForFrog.html"><h2>Search for frog by name(option to update frog)</h2></a><br/>
+  	<a href="showAllFrogs.do"><h2>Frog Inventory</h2></a><br/>
   </body>
 </html>
