--- a/WebContent/newFrog.html
+++ b/WebContent/newFrog.html
@@ -2,19 +2,19 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<link rel="stylesheet" href="newfrog.css"/>
 <title>add a new frog</title>
 </head>
 <body>
-	<h3>Add a frog</h3>
+	<h1>Add a frog</h1>
 	<form action="NewFrog.do" method="POST">
-		
-		Name:
-		<input type="text" name="name" value=" "/><br/>
-		lifespanYears: 
-		<input type="text" name="lifespanYears" value=" "/><br/>
-		region:
-		<input type="text" name="region" value=" "/>
-		<input type="submit" value="Add Frog" />
+		<h2>Name:</h2>
+		<input type="text" name="name" value=""/><br/>
+		<h2>lifespanYears:</h2>
+		<input type="text" name="lifespanYears" value=""/><br/>
+		<h2>region:</h2>
+		<input type="text" name="region" value=""/><br/>
+		<h2></h2><input type="submit" value="Add Frog" /></h2>
 	</form>
 </body>
 </html>
