--- a/WebContent/newFrog.html
+++ b/WebContent/newFrog.html
@@ -16,5 +16,16 @@
 		<input type="text" name="region" value=""/><br/>
 		<h2></h2><input type="submit" value="Add Frog" /></h2>
 	</form>
+	
+	<h1>Add a frog to the database</h1>
+	<form action="addFrogToDb.do" method="POST">
+		<h2>Name:</h2>
+		<input type="text" name="name" value=""/><br/>
+		<h2>lifespanYears:</h2>
+		<input type="text" name="lifespanYears" value=""/><br/>
+		<h2>region:</h2>
+		<input type="text" name="region" value=""/><br/>
+		<h2></h2><input type="submit" value="Add Frog" /></h2>
+	</form>
 </body>
 </html>
